// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled Components Snapshot Tests matches snapshot for ModeButton in non-selected state 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-17zc69a-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Non-Selected Mode
  </button>
</div>
`;

exports[`Styled Components Snapshot Tests matches snapshot for ModeButton in selected state 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1t6tdez-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Selected Mode
  </button>
</div>
`;

exports[`Styled Components Snapshot Tests matches snapshot for TopicButton in non-selected state 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-93iog5-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Non-Selected Topic
  </button>
</div>
`;

exports[`Styled Components Snapshot Tests matches snapshot for TopicButton in selected state 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-129m9e4-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Selected Topic
  </button>
</div>
`;
